Java 21 deprecations